--- a/neurospora_regulation-supplementary.ipynb
+++ b/neurospora_regulation-supplementary.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -466,17 +466,17 @@
       "RXN_FILE neurospora_pentose_phos.glycolysis.tca.2.dat\r\n",
       "INIT_FILE neurospora_pentose_phos.glycolysis.tca.2_reg.rstrt\r\n",
       "INIT_FILE yeast_centralMetab_concs2.in \r\n",
-      "INIT_FILE neurospora_pentose_phos.glycolysis.tca_concs.in\r\n",
       "INIT_FILE neurospora_pentose_phos.glycolysis.tca.2_reg.rstrt\r\n",
+      "INIT_FILE neurospora_pentose_phos.glycolysis.tca.2_reg_concs.in\r\n",
       "LOG_FILE neurospora_pentose_phos.glycolysis.tca.2_reg.log\r\n",
       "OUT_FILE neurospora_pentose_phos.glycolysis.tca.2_reg.out\r\n",
       "USE_DEQ 1\r\n",
       "NO_ROUND_FROM_DEQ 1\r\n",
-      "ODE_T_FINAL 100000\r\n",
+      "ODE_T_FINAL 10000000\r\n",
+      "ODE_RXN_VIEW_FREQ 1000\r\n",
       "DELTA_CONCS_CHOICE 13\r\n",
-      "DELTA_CONCS_CHOICE 8\r\n",
+      "DELTA_CONCS_CHOICE 7\r\n",
       "DERIV_THRESH  5.0e-17\r\n",
-      "ODE_RXN_VIEW_FREQ 1\r\n",
       "WARMUP_STEPS 00000000\r\n",
       "RECORD_STEPS 000000\r\n",
       "TEMP_KELVIN 298.15\r\n",
@@ -499,7 +499,7 @@
     }
    ],
    "source": [
-    "cat /Users/d3k137/docs/projects/boltzmann/code/06212017/run/pentose_phos.glycolysis.tca/neurospora_pentose_phos.glycolysis.tca_reg.in"
+    "cat neurospora_pentose_phos.glycolysis.tca_reg.in"
    ]
   },
   {
@@ -637,7 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#args = (\"/Users/d3k137/docs/projects/boltzmann/code/11272017/src/boltzmann\", \"neurospora_pentose_phos.glycolysis.tca_reg.in\")\n",
+    "#args = (\"boltzmann\", \"neurospora_pentose_phos.glycolysis.tca_reg.in\")\n",
     "#\n",
     "#popen = subprocess.Popen(args, stdout=subprocess.PIPE)\n",
     "#popen.wait()\n",
@@ -1504,7 +1504,6 @@
     }
    ],
    "source": [
-    "\n",
     "ode_metabolites_steadystate = \\\n",
     "  pd.DataFrame(data = ode_metabolites.iloc[-30:,:].mean(),columns=['ODE'])\n",
     "#display(ode_metabolites_steadystate[ode_metabolites_steadystate['ODE'] > 1.0e-03])\n",
