--- a/neurospora_regulation_rate_constants-supplementary.ipynb
+++ b/neurospora_regulation_rate_constants-supplementary.ipynb
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "# Uncomment to change to your directory, if needed:\n",
+    "# Comment/uncomment to change to your directory, if needed:\n",
     "cwd = os.getcwd()\n",
     "mydir = cwd+'/simulation_data'\n",
     "if 'simulation_data' not in mydir: \n",
@@ -70,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -581,11 +583,7 @@
    },
    "outputs": [],
    "source": [
-    "#args = (\"/Users/d3k137/docs/projects/boltzmann/code/06292017/src_original/boltzmann\", \"pentose_phos.glycolysis.tca.in\")\n",
-    "#args = (\"/Users/d3k137/docs/projects/boltzmann/code/10182017/src/boltzmann\", \"neurospora_pentose_phos.glycolysis.tca_reg_rate.in\")\n",
-    "#args = (\"/Users/d3k137/docs/projects/boltzmann/code/11112017/src/boltzmann\", \"neurospora_pentose_phos.glycolysis.tca_reg_rate.in\")\n",
-    "#args = (\"/Users/d3k137/docs/projects/boltzmann/code/12042017/src/boltzmann\", \"neurospora_pentose_phos.glycolysis.tca_reg_rate.in\")\n",
-    "\n",
+    "#args = (\"boltzmann\", \"neurospora_pentose_phos.glycolysis.tca_reg_rate.in\")\n",
     "#Or just:\n",
     "#args = \"bin/bar -c somefile.xml -d text.txt -r aString -f anotherString\".split()\n",
     "#popen = subprocess.Popen(args, stdout=subprocess.PIPE)\n",
